# monix

./: .env.example  .gitignore  PRD.md  README.ko.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: server-install.md
docs/issues/: 005-discord-slack-webhook-notifications.md
monix/: __init__.py  cli.py  picker.py  render.py
monix/config/: keystore.py  settings.py
monix/core/: assistant.py
monix/llm/: client.py  runner.py
monix/llm/providers/: __init__.py  base.py  codex.py  factory.py  gemini.py
monix/llm/tests/: test_client.py  test_codex_provider.py  test_runner.py
monix/tools/notify/: __init__.py  _types.py  discord.py  slack.py  webhook.py
monix/tools/system/: metrics.py
tests/: test_provider_setup.py
tests/tools/: test_notify.py  test_system_metrics.py
