[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monix"
version = "0.2.2"
description = "Provider-backed terminal assistant for server monitoring"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Monix" }]
license = "MIT"
keywords = ["monitoring", "terminal", "cli", "ai", "server", "devops", "codex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Terminals",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/co-tox/monix"
Repository = "https://github.com/co-tox/monix"
"Bug Tracker" = "https://github.com/co-tox/monix/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]
mcp = ["mcp>=1.0.0; python_version >= '3.10'"]

[project.scripts]
monix = "monix.cli:main"
monix-mcp = "monix.mcp:main"

[tool.setuptools.packages.find]
include = ["monix*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
